Added a call to reset_gui() so the UI is updated after a CCA_Save_File event

--- a/TODO
+++ b/TODO
@@ -1,7 +1,23 @@
-Planned features for Dino:
+Planned features for Dino. All edit operations should work while the sequencer
+is playing (and recording).
 
-[/] Editing, saving, loading patterns, arrangements, and info
-[/] Connecting instruments to MIDI ports, sequence MIDI
-[/] Synchronize with Jack transport
-[X] Support LASH
-[ ] Record MIDI
+Should be done before 0.2:
+
+ [X] Creating and deleting tracks
+ [/] Changing track properties (label, MIDI port, MIDI channel)
+ [X] Creating and deleting patterns
+ [ ] Changing pattern properties (label, length, note resolution, CC resolution)
+ [/] Editing note events in patterns
+ [/] Editing CC and pitch bend events in patterns
+ [X] Arrange patterns
+ [/] Add, edit, and delete tempo changes
+ [X] Play MIDI note events
+ [X] Loading and saving files
+ [X] Support for CCA events Save_File, Restore_File, and Quit
+ [ ] Play MIDI CC and pitch bend events
+
+Later:
+
+ [ ] Record MIDI note events
+ [ ] Record MIDI CC and pitch bend events
+ [ ] Play loops, set loop points
