--- a/TODO
+++ b/TODO
@@ -11,7 +11,7 @@ Should be done before 0.2:
  [\] Editing CC and pitch bend events in patterns
  [X] Arrange patterns
  [\] Add, edit, and delete tempo changes
- [X] Play MIDI note events
+ [/] Play MIDI note events
  [X] Loading and saving files
  [X] Support for CCA events Save_File, Restore_File, and Quit
  [ ] Play MIDI CC and pitch bend events
