--- a/TODO
+++ b/TODO
@@ -21,3 +21,4 @@ Later:
  [ ] Record MIDI note events
  [ ] Record MIDI CC and pitch bend events
  [ ] Play loops, set loop points
+ [ ] Edit the song and control the sequencer with OSC commands
