--- a/TODO
+++ b/TODO
@@ -4,13 +4,13 @@ is playing (and recording).
 Should be done before 0.2:
 
  [X] Creating and deleting tracks
- [/] Changing track properties (label, MIDI port, MIDI channel)
+ [X] Changing track properties (label, MIDI port, MIDI channel)
  [X] Creating and deleting patterns
  [ ] Changing pattern properties (label, length, note resolution, CC resolution)
  [/] Editing note events in patterns
  [\] Editing CC and pitch bend events in patterns
  [X] Arrange patterns
- [\] Add, edit, and delete tempo changes
+ [X] Add, edit, and delete tempo changes
  [/] Play MIDI note events
  [X] Loading and saving files
  [X] Support for CCA events Save_File, Restore_File, and Quit
