--- a/TODO
+++ b/TODO
@@ -6,13 +6,13 @@ Should be done before 0.2:
  [ ] Change song length
  [X] Creating and deleting tracks
  [X] Changing track properties (label, MIDI port, MIDI channel)
- [X] Creating and deleting patterns
+ [/] Creating and deleting patterns
  [ ] Changing pattern properties (label, length, note resolution, CC resolution)
  [X] Editing note events in patterns
  [\] Editing CC and pitch bend events in patterns
  [X] Arrange patterns
  [X] Add, edit, and delete tempo changes
- [/] Play MIDI note events
+ [X] Play MIDI note events
  [X] Loading and saving files
  [X] Support for CCA events Save_File, Restore_File, and Quit
  [ ] Play MIDI CC and pitch bend events
