Removed some unused data members in Pattern and prepared for adding functions that change the length and step resolution of a pattern

--- a/TODO
+++ b/TODO
@@ -7,7 +7,7 @@ Should be done before 0.2:
  [X] Creating and deleting tracks
  [X] Changing track properties (label, MIDI port, MIDI channel)
  [X] Creating and deleting patterns
- [ ] Changing pattern properties (label, length, note resolution, CC resolution)
+ [ ] Changing pattern properties (label, length, note resolution)
  [X] Editing note events in patterns
  [/] Editing CC and pitch bend events in patterns
  [X] Arrange patterns
@@ -15,7 +15,7 @@ Should be done before 0.2:
  [X] Play MIDI note events
  [X] Loading and saving files
  [X] Support for CCA events Save_File, Restore_File, and Quit
- [ ] Play MIDI CC and pitch bend events
+ [/] Play MIDI CC and pitch bend events
 
 Later (before 0.4?):
 
