Added a config header, moved preprocessor defines to that header

--- a/TODO
+++ b/TODO
@@ -16,6 +16,7 @@ Should be done before 0.2:
  [X] Loading and saving files
  [X] Support for CCA events Save_File, Restore_File, and Quit
  [/] Playing MIDI CC and pitch bend events
+ [ ] Duplicate patterns
 
 Later (before 0.4?):
 
