--- a/README
+++ b/README
@@ -1,6 +1,7 @@
 Dino is a MIDI sequencer for GNU/Linux. It uses the JACK system to send MIDI 
 to other software and to synchronise with JACK transport. You need a version of
-JACK that is patched to handle MIDI as well as audio to use Dino.
+JACK that is patched to handle MIDI as well as audio to use Dino. A patch can
+be found here: http://www.custard.org/~deviant/jack-midi/
 
 Dino requires that jackd is running in order to sequence anything (although
 you can still edit songs without it) and that lashd is running in order to be
