Added new build system, committed all other changes done during the SF blackout (mostly plugin architecture changes)

--- a/TODO
+++ b/TODO
@@ -24,6 +24,7 @@ Later (before 0.4?):
  [ ] Record MIDI CC and pitch bend events
  [ ] Play loops, set loop points
  [ ] Support libmpmd or equivalent
+ [ ] Wrap libdinoseq in Python
  [ ] Embed a Python interpreter
  
 Crazy ideas:
