--- a/TODO
+++ b/TODO
@@ -20,8 +20,8 @@ Should be done before 0.2:
 
 Later (before 0.4?):
 
- [ ] Record MIDI note events
- [ ] Record MIDI CC and pitch bend events
+ [/] Record MIDI note events
+ [/] Record MIDI CC and pitch bend events
  [X] Play loops, set loop points
  [ ] Support libmpmd or equivalent
  [X] Wrap libdinoseq in Python
