--- a/TODO
+++ b/TODO
@@ -26,7 +26,8 @@ Later (before 0.4?):
  [ ] Support libmpmd or equivalent
  [X] Wrap libdinoseq in Python
  [ ] Embed a Python interpreter
- [ ] Add track controllers (same as pattern controllers, but not bound to a pattern)
+ [ ] Add track controllers (same as pattern controllers, but not bound to a 
+     pattern)
  
 Crazy ideas:
 
