--- a/README
+++ b/README
@@ -2,12 +2,10 @@ Dino is a MIDI sequencer for GNU/Linux. It uses the JACK system to send MIDI
 to other software and to synchronise with JACK transport. You need a version of
 JACK later than 0.102.6 - earlier versions do not have MIDI support.
 
-Dino requires that jackd is running in order to sequence anything (although
-you can still edit songs without it) and that lashd is running in order to be
-able to save anything you do. If you set the environment variables 
-JACK_START_SERVER and LASH_START_SERVER to 1 they will both be started
-automatically when you start Dino (this is true for all programs that use
-JACK or LASH).
+Dino requires that jackd and lashd are running in order to work. If you set 
+the environment variables JACK_START_SERVER and LASH_START_SERVER to 1 they 
+will both be started automatically when you start Dino (this is true for 
+all programs that use JACK or LASH).
 
 
 The arrangement editor
