--- a/TODO
+++ b/TODO
@@ -62,4 +62,6 @@ Crazy ideas:
  * Store a voice number in each note
  
  * Remove forced quantisation
+
+ * Add an aftertouch curve for every note
  
