--- a/TODO
+++ b/TODO
@@ -20,21 +20,27 @@ Should be done before 0.2:
 
 Should be done before 0.4:
 
- [/] Add D-Bus interface
+ [ ] Remove forced quantisation
  [X] Record MIDI note events
  [/] Record MIDI CC and pitch bend events
  [X] Play loops, set loop points
- [ ] Support libmpmd or equivalent
- [/] Embed a Python interpreter
  [X] Add track controllers (same as pattern controllers, but not bound to a 
      pattern)
 
 Should be done before 0.6:
 
- [ ] Remove forced quantisation
+ [ ] Support libmpmd or equivalent
+
+Should be done before 0.8:
+
+ [/] Add D-Bus interface
+ [/] Embed a Python interpreter
+ [ ] Add external actions (executable files talking to Dino over D-Bus)
+
+Should be done before 0.10:
+
  [ ] Add export to Ogg Vorbis or other audio formats using JACK freewheeling
      and recording
- [ ] Add external actions (executable files talking to Dino over D-Bus)
  [/] Wrap libdinoseq in Python
  
 Crazy ideas:
