--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,17 @@
+Version 0.2.3 (2010-01-30)
+	* Updated to latest JACK API (MIDI functions)
+	* Fixed some code errors detected by GCC 4.3 and later
+	* Fixed namespace collisions in track.cpp
+	* Fixed bug caused by JACK transport ABI change (transport struct
+	  is now packed, can't take reference to members)
+	* Added configure check for libsigc++ >= 2.0.18 (patch by
+	  Dennis Prochko)
+	* Fixed include path bug in src/gui/Makefile that broke
+	  make distcheck
+
 Version 0.2.2 (2006-10-10)
-	* Added namespace prefix Pango:: in a couple of places to avoid 
-	  ambiguity (Pango::Layout vs Gtk::Layout) that stopped the 
+	* Added namespace prefix Pango:: in a couple of places to avoid
+	  ambiguity (Pango::Layout vs Gtk::Layout) that stopped the
 	  compilation, reported by nedko on #lad
 
 Version 0.2.1 (2006-05-17)
@@ -11,6 +22,6 @@ Version 0.2.1 (2006-05-17)
 	* Fixed a rather embarrassing timestamping bug that forced all events
 	  to happen on JACK period boundaries, adding lots of jitter at large
 	  period sizes
-	
+
 Version 0.2.0 (2006-05-06):
 	* First release
