--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Version 0.2.5 (ONGOING):
+	* Fixed crashing bug that was triggered by selecting a track with no
+	  patterns in the pattern editor
+
 Version 0.2.4 (2010-02-10):
 	* Fixed bug with missing <cstdio> header (reported by Harry Van Haaren)
 
