--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,5 @@
 Version 0.2.5 (ONGOING):
+	* Fixed bug where pattern names weren't shown in the sequence editor
 	* Fixed bug where the pattern names were overwritten by empty strings
 	  when loading songs
 	* Fixed bug where the spinbutton and song ruler wasn't updated when
