--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,6 @@
 Version 0.2.5 (ONGOING):
+	* Fixed bug where the pattern combo box wasn't updated when the
+	  pattern name changed
 	* Fixed bug where pattern names weren't shown in the sequence editor
 	* Fixed bug where the pattern names were overwritten by empty strings
 	  when loading songs
