--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,5 @@
 Version 0.2.5 (ONGOING):
+	* Fixed bug that caused timing problems at certain JACK sample rates
 	* Show pattern names in popup menu in the arrangement editor
 	* Actually save and load automation curves
 	* Don't send All Notes Off at pattern ends unless there are active notes
