--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,4 @@
-Version 0.2.6 (ONGOING):
+Version 0.2.6 (2010-12-18):
 	* Fixed a timebase related bug that could crash Dino on startup
 
 Version 0.2.5 (2010-12-17):
